src/test/ui/pattern/pattern-ident-path-generics.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-ident-path-generics.rs:3:9
   |
LL |         None::<isize> => {}
   |         ^^^^^^^^^^^^^ expected &str, found isize
   |
   = note: expected type `std::option::Option<&str>`
              found type `std::option::Option<isize>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
